--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 idmtodb/
 test/
 Juno_account_username_DIVISION_script.docx
+CMCC_VPN_account_username_GROUP_script.docx
 test_user_20230614
 find_and_replace_docx.sh
