-MC : blank surname and username support with name-surname-dayofyear-year suppport and project account username=name flavour

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 idmtodb/
+idmtodb multiple groups branch/
 test/
 Juno_account_username_DIVISION_script.docx
 CMCC_VPN_account_username_GROUP_script.docx
